--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tailwindcss/container-queries": "^0.1.1",
     "@uploadthing/react": "^6.0.2",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "date-arithmetic": "^4.1.0",
     "dayjs": "^1.11.10",
