--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,4 @@ NEXTAUTH_SECRET=QxltNndBdkboPpm3BriCvk9fduwaC5wFNwqkonA9FHk=
 NEXTAUTH_URL=http://localhost:3000
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+API_URL=64.227.177.118:4000
