--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^6.21.1",
     "react-scroll": "^1.9.0",
     "react-svg-worldmap": "2.0.0-alpha.16",
     "react-use": "^17.4.2",
