--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "glob": "^10.3.10",
     "jotai": "2.6.0",
     "lodash": "^4.17.21",
+    "multiselect-react-dropdown": "^2.0.25",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
