--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-router-dom": "^6.21.1",
     "react-scroll": "^1.9.0",
     "react-svg-worldmap": "2.0.0-alpha.16",
+    "react-toastify": "^9.1.3",
     "react-use": "^17.4.2",
     "recharts": "^2.10.3",
     "resend": "^2.0.0",
